kubernetes/yaml/resources/api-daemon/api-daemon.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-daemon
spec:
  podSelector:
    matchLabels:
      app: api-daemon
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 3000
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-daemon
  name: svc-api-daemon
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: api-daemon
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-api-daemon
  annotations:
    networking.gke.io/managed-certificates: cert-production-api-daemon
    kubernetes.io/ingress.global-static-ip-name: addr-production-api-daemon
spec:
  backend:
    serviceName: svc-api-daemon
    servicePort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-daemon
  name: api-daemon
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-daemon
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-daemon
        version: "1.0.1"
        api-redis-client: "true"
        api-postgres-client: "true"
    spec:
      containers:
        - image: gcr.io/feeld-daveio/api-daemon:1.0.1
          name: api-daemon
          resources:
            requests:
              cpu: 1m
              memory: 32Mi
